# homework-2026-is2-intelligence-in-living-systems

./: pyproject.toml  readme.md
twoBridgesScenario/: __init__.py  ant.py  pheromone.py  utils.py  view.py  world.py  world.yaml
